--- a/cap2_ToDoApp/index.html
+++ b/cap2_ToDoApp/index.html
@@ -16,27 +16,28 @@
         <h1>* My To Do App *</h1>
     </header>
     <main>
-        <form id="form">
-            <div class="radioButtons" name="radioButtons">
+        <div id="form">
+            <form class="radioButtons">
                 <input type="radio" name="radioButton" id="all">
                 <label for="all">All</label><br>
                 <input type="radio" name="radioButton" id="done">
                 <label for="done">Done</label><br>
                 <input type="radio" name="radioButton" id="undone">
                 <label for="undone">Undone</label><br>
-            </div>
-            <div class="removeButton" name="removeButtonDiv">
+            </form>
+            <form class="removeButton">
                 <button class="buttons" id="removeButton">Remove all Done To Do's</button>
-            </div>
-            <div class="addSection" name="addSection">
+            </form>
+
+            <div class="addSection">
                 <input type="text" name="addField" id="addField">
                 <button class="buttons" id="addButton">Add</button>
             </div>
             <ul class="toDoList" id="ul"></ul>
-        </form>
 
-
+        </div>
     </main>
+
 
     <script src="script.js"></script>
 </body>
