Change click event listeners to form submits

--- a/cap3_toDoApp-with-API/index.html
+++ b/cap3_toDoApp-with-API/index.html
@@ -25,14 +25,14 @@
                 <input type="radio" name="radioButton" id="undone">
                 <label for="undone">Undone</label><br>
             </form>
-            <form class="removeButton">
+            <form class="removeButton" id="removeForm">
                 <button class="buttons" id="removeButton">Remove all Done To Do's</button>
             </form>
 
-            <div class="addSection">
+            <form class="addSection" id="addForm">
                 <input type="text" name="addField" id="addField">
                 <button class="buttons" id="addButton">Add</button>
-            </div>
+            </form>
             <ul class="toDoList" id="ul"></ul>
 
         </div>
